# wedding

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: __init__.py  config.py  crud.py  db.py  email_utils.py  main.py  schemas.py  seed.py
app/static/: admin.html  admin.js  index.html  script.js  styles.css
