[tool.poetry]
authors = ["vk1337atliberty@gmail.com"]
description = "Свадебный сайт-приглашение с персональными ссылками и RSVP"
name = "my-wedding-site"
package-mode = false
packages = []
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.107.0"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
python-multipart = "^0.0.6"
pydantic = "^2.9"
pydantic-settings = "^2.14.1"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
